ingress-podinfo-haproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-haproxy
  annotations:
    haproxy-ingress.github.io/rewrite-target: /
spec:
  ingressClassName: haproxy 
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
