ingress-podinfo-nginx-hostname.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-nginx-hostname
  annotations:
    haproxy-ingress.github.io/rewrite-target: /
spec:
  tls:
    - hosts:
          - podinfo-haproxy.devsres.com 
  ingressClassName: nginx 
  rules:
  - host: podinfo-haproxy.devsres.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
